Coverity analysis defect 121370: Parse warning

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 5.3.0
    • Affects Version/s: None
    • Component/s: None
    • Fully Compatible
    • ALL
    • QE 2022-02-07
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Parse warning

      A parse warning may reduce maintainability of the code, or it may indicate a serious error. A parse warning from the Coverity parser may indicate a bug, or poor coding practice
      /src/mongo/db/query/sbe_stage_builder_expression.cpp:1841: PW.PARAMETER_HIDDEN 121370 declaration hides parameter "expr" (declared at line 1830)

            Assignee:
            Yoon Soo Kim (Inactive)
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: