SERVER-62897 Fix a hidden parameter warning